--- a/css/main.css
+++ b/css/main.css
@@ -3,34 +3,57 @@ body{
 	min-width: 960px;
 	text-align: center;
 	font-size: 24px;
+	font-family: 'Abel', sans-serif;
 }
 
-header
+header, nav
 {
-	background-color: rgb(68,120,168);
-	width: 960px;
-	display: inline-block;
 	color: white;
+	font-size: 40px;
+	display: inline-block;
+	padding-left: 40px;
 }
 
-article 
+table 
 {
+	color: rgb(0,0,0);
+	border: 0px;
+	border-bottom: 5px;
+	border-top: 20px;
+	border-style: solid;
+	border-color: rgb(68,120,168);
 	width: 960px;
 	background-color: rgb(244,244,232);
 	display: inline-block;
+	box-shadow: 0 0 10px rgba(0,0,0,0.5);
 }
 
-article p {
-	background-color: rgb(240,240,250);
-	color: rgb(0,0,0);
-}
-
-section 
-{
-	width: 960px;
+.table__title-line {
+	background-color: rgb(68,120,168);
 	color: white;
+	box-shadow: 0 0 10px rgba(0,0,0,0.5);
+	font-size: 25px;
+	font-family: arial;
 	display: inline-block;
-	background-color: rgb(68,120,168); 
+	padding:  10px;
 }
+
+.table__information-block {
+	display: inline-block;
+	padding: 40px;
+}
+
+th {
+	width: 480px;
+}
+
+footer {
+	color: white;
+}
+
+#name {
+	font-size: 70px;
+}
+
 
 
