--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,18 @@
+@font-face {
+  font-family: headerFont;
+  src: url(fonts/Pacifico.ttf);
+}
+
+@font-face {
+  font-family: bodyFont;
+  src: url(fonts/arbat.ttf);
+}
+
 body{
-	background:  #E0EAF5; 
-	min-width: 960px;
+	background: linear-gradient(to right, rgba(255,255,255,1) 0%, rgba(178,201,225,1) 51%, rgba(225,234,244,1) 51%, rgba(240,247,255,1) 100%); 
 	text-align: center;
 	margin: 0;
-	font-family: 'Open Sans', sans-serif;
+	font-family: 'bodyFont';
 }
 
 * {
@@ -14,29 +23,34 @@ body{
 header
 {
 	color: white;
-	font-size: 30px;
+	font-size: 50px;
 	display: inline-block;
 	padding-left: 40px;
+	text-shadow: 0 0 7px rgba(68,120,168,1);
+	font-family: 'headerFont';
 } 
 
 nav {
 	background-color: rgb(68,120,168);
 	height:60px;
 	position: fixed;
-	width: 64%;
-	margin-left: 18%;
+    left: 50%;
+    transform: translate(-50%, 0);
 	box-shadow: 0 0 10px rgba(0,0,0,0.5);
 	border-radius: 15px;
 	margin-top: 100px;
+	width: 850px;
 } 
 
 input[type=button] {
+	min-width: 70px;
 	margin:10px;
-	color: #fff; /* цвет текста */
-	text-decoration: none; /* убирать подчёркивание у ссылок */
-	user-select: none; /* убирать выделение текста */
-	background: none; /* фон кнопки */
-	padding: 9px; /* отступ от текста */
+	color: #fff; 
+	text-decoration: none; 
+	user-select: none;
+	background: none; 
+	padding: 7px; 
+	font-size: 15px;
 	cursor:pointer;
 	border-style: solid;
 	border-width: 2px;
@@ -44,10 +58,10 @@ input[type=button] {
 	border-radius: 15px;
 } 
 input[type=button]:hover { 
-	background: rgb(232,95,76); 
+	background: #C9D6F4; 
 	border-color: transparent;
-} /* при наведении курсора мышки */
-input[type=button]:active { background: rgb(152,15,0); } /* при нажатии */
+} 
+input[type=button]:active { background: #267EC9; } /* при нажатии */
 
 
 table 
@@ -81,10 +95,6 @@ input {
 	border:none;
 }
 
-#name {
-	font-size: 35px;
-}
-
 .table__title-line {
 	border: 0px;
 	border-top: 1px;
@@ -106,6 +116,10 @@ input {
 	padding: 40px;
 }
 
+
+tr:first-child {
+	font-size: 35px;
+}
 
 footer {
 	color: white;
