--- a/css/main.css
+++ b/css/main.css
@@ -8,26 +8,26 @@
   src: url(fonts/arbat.ttf);
 }
 
-body{
+body {
+	margin: 0;
 	background: linear-gradient(to right, rgba(255,255,255,1) 0%, rgba(178,201,225,1) 51%, rgba(225,234,244,1) 51%, rgba(240,247,255,1) 100%); 
 	text-align: center;
-	margin: 0;
 	font-family: 'bodyFont';
 }
 
 * {
 	transition-property: all;
   	transition-duration: 0.5s;
-  }
+ }
 
-header
-{
-	color: white;
-	font-size: 50px;
+header {
 	display: inline-block;
 	padding-left: 40px;
-	text-shadow: 0 0 7px rgba(68,120,168,1);
+	
+	color: white;
 	font-family: 'headerFont';
+	font-size: 50px;
+	text-shadow: 0 0 7px rgba(68,120,168,1);
 } 
 
 header:hover {
@@ -36,55 +36,63 @@ header:hover {
 }
 
 nav {
-	background-color: rgb(68,120,168);
+	width: 850px;
 	height:60px;
+	margin-top: 100px;
+	
+	background-color: rgb(68,120,168);
+	box-shadow: 0 0 10px rgba(0,0,0,0.5);
+	border-radius: 15px;
+	
 	position: fixed;
     left: 50%;
     transform: translate(-50%, 0);
-	box-shadow: 0 0 10px rgba(0,0,0,0.5);
-	border-radius: 15px;
-	margin-top: 100px;
-	width: 850px;
+	
 } 
 
 input[type=button], input[type=submit] {
 	min-width: 70px;
 	margin:10px;
+	padding: 7px; 
+	background: none; 
+	
+	font-size: 15px;
 	color: #fff; 
 	text-decoration: none; 
 	user-select: none;
-	background: none; 
-	padding: 7px; 
-	font-size: 15px;
 	cursor:pointer;
+	
 	border-style: solid;
 	border-width: 2px;
 	border-color: white;
 	border-radius: 15px;
 } 
+
 input[type=button]:hover, input[type=submit]:hover { 
 	background: #C9D6F4; 
 	border-color: transparent;
 	box-shadow: 0 7px 17px rgba(0,0,0,0.5);
+}
 
+input[type=button]:active, input[type=submit]:active  { 
+	background: #267EC9; 
 } 
-input[type=button]:active, input[type=submit]:active  { background: #267EC9; } /* при нажатии */
 
-
-table 
-{
+table {
+	display: inline-block;
+	width: 800px;
 	margin-top: 70px;
+
+	background-color: rgb(244,244,232);
 	color: rgb(0,0,0);
+	box-shadow: 0 0 10px rgba(0,0,0,0.5);
+
 	border: 0px;
 	border-bottom: 5px;
 	border-top: 20px;
 	border-style: solid;
 	border-color: rgb(68,120,168);
 	border-radius: 10px;
-	width: 800px;
-	background-color: rgb(244,244,232);
-	display: inline-block;
-	box-shadow: 0 0 10px rgba(0,0,0,0.5);
 }
 
 th {
@@ -94,43 +102,53 @@ th {
 img {
 	margin-bottom: -20px;
 	margin-top: -1px;
-
 }
 
 .table__title-line {
+	display: inline-block;
+	padding:  7px;
+	box-shadow: 0 0 10px rgba(0,0,0,0.5);
+	background-color: rgb(68,120,168);
+
+	font-size: 18px;
+	font-family: arial;
+	color: white;
+	
 	border: 0px;
 	border-top: 1px;
 	border-bottom: 1px;	
 	border-style: solid;
 	border-color: rgb(244,244,232);
-	background-color: rgb(68,120,168);
-	color: white;
-	box-shadow: 0 0 10px rgba(0,0,0,0.5);
-	font-size: 18px;
-	font-family: arial;
-	display: inline-block;
-	padding:  7px;
 }
 
 .table__information-block {
-	font-size: 16px;
 	display: inline-block;
 	padding: 20px;
+	font-size: 16px;
 }
 
 tr:first-child {
-	font-size: 35px;
 	padding: 0px;
+	font-size: 35px;
 }
 
-.body__registration-form {
+
+.body__registration-form_hide {
+	display: none;
+}
+
+.body__registration-form_active {
 	display: block;
+	padding: 15px;
 	position: fixed;
 	top: 50%;
-	left: 150%;
+	left: 50%;
 	transform: translate(-50%, -50%);
+	
 	box-shadow: 0 15px 40px rgba(0,10,20,0.6);
 	background: #729DE3;
+	text-align: right;
+	
 	border:0px;
 	border-bottom: 5px;
 	border-top: 5px;
@@ -139,11 +157,15 @@ tr:first-child {
 	border-radius: 10px;
 }
 
-fieldset {
-	border: none;
-	background: #729DE3;
+.registration-form__title {
+	margin: 0px;
+	text-align: center;
+	color: white;
+	font-family: 'Arial';
+	font-size: 20px;
+	text-shadow: 0 0 7px rgba(68,120,168,1);
 }
-
+ 
 footer {
 	color: white;
 }
